TEPCO/VisionDemoForDeploy/force-app/main/default/objects/EquipmentAlert__c/EquipmentAlert__c.object-meta.xml
<CustomObject>
    <label>設備アラート</label>
    <nameField>
        <label>アラートID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>設備アラート</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>