TEPCO/VisionDemoForDeploy/force-app/main/default/objects/EquipmentAlert__c/fields/AffectedHouseholds__c.field-meta.xml
<CustomField>
    <fullName>AffectedHouseholds__c</fullName>
    <label>影響世帯数</label>
    <length>100</length>
    <type>Text</type>
</CustomField>