TEPCO/VisionDemoForDeploy/force-app/main/default/objects/EquipmentAlert__c/fields/AlertDescription__c.field-meta.xml
<CustomField>
    <fullName>AlertDescription__c</fullName>
    <label>アラート詳細</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>