TEPCO/VisionDemoForDeploy/force-app/main/default/objects/EquipmentAlert__c/fields/AlertStatus__c.field-meta.xml
<CustomField>
    <fullName>AlertStatus__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>IoT検知</fullName><default>false</default><label>IoT検知</label></value>
            <value><fullName>AI診断</fullName><default>true</default><label>AI診断</label></value>
            <value><fullName>部品手配</fullName><default>false</default><label>部品手配</label></value>
            <value><fullName>作業班手配</fullName><default>false</default><label>作業班手配</label></value>
            <value><fullName>対応実施</fullName><default>false</default><label>対応実施</label></value>
            <value><fullName>復旧確認</fullName><default>false</default><label>復旧確認</label></value>
            <value><fullName>完了</fullName><default>false</default><label>完了</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>