TEPCO/VisionDemoForDeploy/force-app/main/default/objects/EquipmentAlert__c/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <label>担当者</label>
    <length>100</length>
    <type>Text</type>
</CustomField>