TEPCO/VisionDemoForDeploy/force-app/main/default/objects/EquipmentAlert__c/fields/DetectedValue__c.field-meta.xml
<CustomField>
    <fullName>DetectedValue__c</fullName>
    <label>検知値</label>
    <length>255</length>
    <type>Text</type>
</CustomField>