TEPCO/VisionDemoForDeploy/force-app/main/default/objects/EquipmentAlert__c/fields/EquipmentName__c.field-meta.xml
<CustomField>
    <fullName>EquipmentName__c</fullName>
    <label>対象機器</label>
    <length>255</length>
    <type>Text</type>
</CustomField>