TEPCO/VisionDemoForDeploy/force-app/main/default/objects/EquipmentAlert__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>重要度</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Critical</fullName><default>true</default><label>Critical</label></value>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>