TEPCO/VisionDemoForDeploy/force-app/main/default/objects/EquipmentAlert__c/fields/SubstationName__c.field-meta.xml
<CustomField>
    <fullName>SubstationName__c</fullName>
    <label>変電所名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>